# spotifyApp

./: .gitignore  README.md  freshplaylist.py  job.py  main.py  pyproject.toml  requirements.txt  topplaylist.py
.github/workflows/: test.yml
src/spotify_scripts/: freshplaylist.py  main.py  topplaylist.py
tests/: config.json  test_app.py  test_freshPlaylist.py  test_this.py  test_topPlaylist.py
